feat: friends backend